test/ui/tests/metadata/top-level-record-trailing-comma.stderr
error: found `,` but expected end of input
 --> ${TEST_FOLDER}/metadata/top-level-record-trailing-comma.metadata:5:2
  |
5 | },
  |  ^
  |

error: aborting due to previous error

