test/ui/tests/metadata/top-level-record-trailing-comma.metadata
# TEST fail metadata

{
    left: "right",
},
